--- a/JSVC/package.json
+++ b/JSVC/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.26.0",
-    "@babel/preset-env": "^7.26.0"
+    "@babel/preset-env": "^7.26.0",
+    "express": "^4.21.2"
   }
 }
