--- a/JSVC/package.json
+++ b/JSVC/package.json
@@ -2,19 +2,28 @@
   "name": "jsvm",
   "version": "1.0.0",
   "description": "Javascript virtual matchine",
-  "main": "index.js",
+  "main": "scr/index.js",
   "scripts": {
-    "start": "npx tsc && node dist/index.js"
+    "build": "npx tsc",
+    "start": "node dist/index.js",
+    "dev": "nodemon --watch src --ext ts --exec ts-node src/index.ts"
   },
   "author": "pravats459@gmail.com",
   "license": "ISC",
   "devDependencies": {
     "@types/babel__core": "^7.20.5",
-    "@types/node": "^22.10.5"
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/express-fileupload": "^1.5.1",
+    "@types/node": "^22.10.5",
+    "ts-node": "^10.9.2"
   },
   "dependencies": {
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
-    "express": "^4.21.2"
+    "chokidar": "^4.0.3",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "express-fileupload": "^1.5.1"
   }
 }
