--- a/JSVC/package.json
+++ b/JSVC/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^5.0.0",
     "@types/express-fileupload": "^1.5.1",
     "@types/node": "^22.10.5",
+    "@types/socket.io": "^3.0.1",
     "ts-node": "^10.9.2"
   },
   "dependencies": {
@@ -24,6 +25,7 @@
     "chokidar": "^4.0.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "express-fileupload": "^1.5.1"
+    "express-fileupload": "^1.5.1",
+    "socket.io": "^4.8.1"
   }
 }
