--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -16,6 +16,7 @@
     "ts-node": "^10.9.2"
   },
   "dependencies": {
+    "mongoose": "^8.10.1",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
   }
