--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -4,18 +4,22 @@
   "description": "nodelab server",
   "main": "src/index.ts",
   "scripts": {
-    "build": "npx tsc",
+    "build": "npx tsc && npx tsc-alias",
     "start": "node dist/index.js",
-    "dev": "nodemon --watch src --ext ts --exec ts-node src/index.ts"
+    "dev": "nodemon --watch src --ext ts --exec ts-node -r tsconfig-paths/register src/index.ts"
   },
   "author": "pravats459@gmail.com",
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@types/dockerode": "^3.3.34",
     "@types/node": "^22.10.5",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.10",
+    "tsconfig-paths": "^4.2.0"
   },
   "dependencies": {
+    "dockerode": "^4.0.4",
     "mongoose": "^8.10.1",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
