--- a/SERVER/config.json
+++ b/SERVER/config.json
@@ -8,5 +8,14 @@
     "logFolder": ".//logs//",
     "logFile": "%DATE%.log",
     "logLevel": "error"
+  },
+  "dockerConfig": {
+    "image": "jsvc-service",
+    "network": "jsvc-network",
+    "CpuShares": 512,
+    "CpuQuota": 50000,
+    "CpuPeriod": 100000,
+    "Memory": 256,
+    "MemorySwap": -1
   }
 }
