--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,1 @@
-# Ignore the build output directory
-/dist/
-*/dist/
-
-# Ignore node_modules
-/node_modules/
-*/node_modules/
-
-#ignore log directory
-/logs/
-*/logs/
+# Global git ignore
